# StarOS-Kernel

./: .gitignore  CLEAN_BUILD_REPORT.md  Cargo.toml  ENGINEERING_EXCELLENCE_REPORT.md  FFI_FILES_CREATED.txt  FFI_PROJECT_SUMMARY.md  LICENSE-MIT  PHASE12_COMPLETE.md  PHASE13_DAY1.md  PHASE13_DAY2.md  README.md  SOC_STAR_X.md  SOC_STAR_X_DIE_LAYOUT.md  fix_imports.sh
kernel/: Cargo.toml  Cargo_bench.toml  REAL_DEVICE_GUIDE.md  aarch64.ld  benchmark_results.csv  build.rs  build_real_device.sh  build_rpi4.sh  linker-arm64.ld  linker-exynos.ld  linker-mediatek.ld  linker-qualcomm.ld  linker-riscv.ld  linker-rpi4.ld  riscv64.ld  run_all_tests.sh  run_phase9_tests.sh  run_tests.sh  test_qemu.sh  validate_phase9.sh
kernel/.cargo/: config.toml
kernel/benches/: kyber_bench.rs
kernel/docs/: PHASE9_COMPLETE.md  PHASE9_REPORT.md  PHASE9_SUMMARY.md
kernel/examples/: pq_crypto_examples.rs  universal_main.rs
kernel/fuzz/: Cargo.toml
kernel/fuzz/fuzz_targets/: dtb_parser.rs
kernel/proptest-regressions/memory/: aslr.txt  protection.txt
kernel/src/: async_ipc.rs  benchmark.rs  capabilities.rs  debug_tools.rs  elf.rs  error.rs  fs.rs  klog.rs  lib.rs  logger.rs  main.rs  memory.rs  power.rs  prelude.rs  real_device.rs  signals.rs  sleep.rs  stack_guard.rs  time.rs
kernel/src/boot/: entry.rs  mod.rs
kernel/src/boot_integration/: boot_image.rs  boot_sequence.rs  early_debug.rs  mod.rs
kernel/src/crypto/: boot_verify.rs  chacha20.rs  mod.rs  pq_kem.rs  pq_sign.rs  rng.rs
kernel/src/crypto/kyber/: decaps.rs  encaps.rs  keygen.rs  mod.rs  ntt.rs  params.rs  (+4 more)
kernel/src/devicetree/: discovery.rs  mod.rs  parser.rs  properties.rs
kernel/src/display_server/: compositor.rs  dma_flip.rs  mod.rs  text_surface.rs
kernel/src/drivers/: README.md  audio.rs  bus.rs  bus_scanner.rs  devicetree.rs  driver_manager.rs  dt_integration.rs  examples.rs  gpio.rs  linux_compat.rs  mock.rs  mod.rs  modem.rs  pmic.rs  registry.rs  samsung.rs  touch.rs  traits.rs  uart.rs  wifi.rs  xiaomi.rs
kernel/src/ffi/: display.rs  input.rs  input_old.rs  ipc.rs  memory.rs  mod.rs  system.rs  tunnel.rs  types.rs
kernel/src/input/: event.rs  mod.rs  mouse.rs
kernel/src/interrupts/: controller.rs  exception.rs  mod.rs  timer.rs
kernel/src/memory/: heap.rs  iommu.rs  kaslr.rs  physical.rs  tlb.rs  virtual_mem.rs
kernel/src/net/: bypass.rs  dev.rs  mod.rs  skbuff.rs  vless.rs  xray.rs
kernel/src/process/: context.rs  ipc.rs  mod.rs  scheduler.rs  sync.rs  task.rs
kernel/src/safety/: boot_validator.rs  memory_map.rs  mod.rs  panic.rs  watchdog.rs
kernel/src/soc/: clock.rs  detection.rs  mod.rs  pmic.rs  reset.rs
kernel/src/sync/: irqsafe.rs  mod.rs
kernel/src/syscall/: mod.rs
kernel/tests/: benchmarks.rs  e2e_real_device.rs  ghost_bus_standalone.rs  ghost_bus_tests.rs  heap_allocator_tests.rs  integration_phase9.rs  integration_tests.rs  physical_allocator_tests.rs  qemu_integration.rs  rng_tests.rs  virtual_memory_tests.rs
(+132 files in other folders)
