[workspace]
resolver = "2"
members = ["kernel"]

[workspace.package]
version = "1.0.0"
authors = ["STAR OS Team"]
edition = "2021"
license = "MIT OR Apache-2.0"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
codegen-units = 1

[profile.test]
panic = "unwind"  # Tests need unwinding for catch_unwind
